cabal-version:      3.0
name:               AdventOfCode
version:            0.1.0.0
license:            NONE
author:             Jianbo Liu
maintainer:         liuchienpo@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Utils
    build-depends:    base >= 4.18
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -O2

executable Download
    import:           warnings
    main-is:          Download.hs
    build-depends:
        base >= 4.18,
        http-conduit,
        text,
        bytestring,
        directory,
        containers,
        http-client,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day01
    import:           warnings
    main-is:          day01.hs
    build-depends:
        base >= 4.18,
        containers,
        criterion,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day02
    import:           warnings
    main-is:          day02.hs
    build-depends:
        base >= 4.18,
        criterion,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day03
    import:           warnings
    main-is:          day03.hs
    build-depends:
        base >= 4.18,
        megaparsec,
        replace-megaparsec,
        criterion,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day04
    import:           warnings
    main-is:          day04.hs
    build-depends:
        base >= 4.18,
        criterion,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day05
    import:           warnings
    main-is:          day05.hs
    build-depends:
        base >= 4.18,
        split,
        criterion,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day06
    import:           warnings
    main-is:          day06.hs
    build-depends:
        base >= 4.18,
        criterion,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day07
    import:           warnings
    main-is:          day07.hs
    build-depends:
        base >= 4.18,
        criterion,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day08
    import:           warnings
    main-is:          day08.hs
    build-depends:
        base >= 4.18,
        criterion,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2

executable day09
    import:           warnings
    main-is:          day09.hs
    build-depends:
        base >= 4.18,
        criterion,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day10
    import:           warnings
    main-is:          day10.hs
    build-depends:
        base >= 4.18,
        criterion,
        array,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day11
    import:           warnings
    main-is:          day11.hs
    build-depends:
        base >= 4.18,
        criterion,
        mtl,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day12
    import:           warnings
    main-is:          day12.hs
    build-depends:
        base >= 4.18,
        criterion,
        mtl,
        array,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day13
    import:           warnings
    main-is:          day13.hs
    build-depends:
        base >= 4.18,
        criterion,
        megaparsec,
        replace-megaparsec,
        text,
        mtl,
        array,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day14
    import:           warnings
    main-is:          day14.hs
    build-depends:
        base >= 4.18,
        criterion,
        megaparsec,
        replace-megaparsec,
        text,
        mtl,
        array,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day15
    import:           warnings
    main-is:          day15.hs
    build-depends:
        base >= 4.18,
        criterion,
        megaparsec,
        replace-megaparsec,
        text,
        mtl,
        split,
        array,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day16
    import:           warnings
    main-is:          day16.hs
    build-depends:
        base >= 4.18,
        criterion,
        megaparsec,
        replace-megaparsec,
        text,
        mtl,
        split,
        array,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day17
    import:           warnings
    main-is:          day17.hs
    build-depends:
        base >=4.18,
        criterion,
        megaparsec,
        replace-megaparsec,
        text,
        mtl,
        split,
        array,
        primitive,
        sbv,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day18
    import:           warnings
    main-is:          day18.hs
    build-depends:
        base >=4.18,
        criterion,
        megaparsec,
        replace-megaparsec,
        text,
        mtl,
        split,
        array,
        primitive,
        sbv,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2

executable day19
    import:           warnings
    main-is:          day19.hs
    build-depends:
        base >=4.18,
        criterion,
        megaparsec,
        replace-megaparsec,
        text,
        mtl,
        split,
        array,
        primitive,
        sbv,
        MemoTrie,
        containers,
        AdventOfCode,
    hs-source-dirs:   app
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wprepositive-qualified-module -Wredundant-constraints -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    ghc-options: -O2
